@@ -1,17 +1,21 @@
 r128:
 New   : lz4 cli sparse file support
 New   : command -m, to compress multiple files in a single command
-Fixed : Restored lz4hc compression ratio (slightly lower since r124)
+Fixed : Restored lz4hc compression ratio (was slightly lower since r124)
 New   : lz4frame supports skippable frames
 Changed:Default "make install" directory is /usr/local
+New   : lz4 cli supports "pass-through" mode
 New   : g++ compatibility tests
 New   : datagen can generate sparse files
 New   : scan-build tests
 Fixed : Fuzzer + frametest compatibility with NetBSD (issue #48)
 Added : Visual project directory
 
+r127:
+N/A   : added a file on SVN
+
 r126:
-New : lz4frame API is now integrated into liblz4
+New   : lz4frame API is now integrated into liblz4
 Fixed : GCC 4.9 bug on highest performance settings, reported by Greg Slazinski
 Fixed : bug within LZ4 HC streaming mode, reported by James Boyle
 Fixed : older compiler don't like nameless unions, reported by Cheyi Lin
